# ode_filters

./: .gitignore  .pre-commit-config.yaml  Covid.ipynb  GP_playground.ipynb  README.md  SBI.ipynb  SIR.ipynb  covid_interactive.ipynb  covid_new.ipynb  covid_sigmoid.ipynb  dense_posterior_interpolation.ipynb  develop_matern.ipynb  diffeq_playground.ipynb  examples.ipynb  interactive_widget_clean.py  iterative_update.mov  kalman_playground.ipynb  kalman_playground2.ipynb  lotka-voltera-system.ipynb  matplotlibrc  mkdocs.yml  playground.ipynb  posterior_updates.mov  probdiffeq.ipynb  probdiffeq_playground.ipynb  pyproject.toml  stable_playground.ipynb  utils.py
.github/workflows/: auto-release.yml  ci.yml  pypi-publish.yml
benchmarks/: README.md  benchmark_calibration_modes.py  benchmark_ode_solvers.py
docs/: adaptive-steps.md  calibration.md  index.md
docs/api/: index.md
docs/examples/: README.md  adaptive-and-calibration.ipynb  additonal_info.ipynb  advanced-features.ipynb  examples.ipynb  quickstart.ipynb  second-order-systems.ipynb
docs/javascripts/: mathjax.js
ode_filters/: GMP_priors.py  ODE_filter_loop.py  ODE_filter_step.py  ODE_filters.py  __init__.py  gaussian_inference.py  helpers.py  measurement_models.py  plotting_utils.py  sqr_gaussian_inference.py
ode_filters/calibration/: __init__.py  rescale.py  sigma.py
ode_filters/filters/: ODE_filter_loop.py  ODE_filter_step.py  __init__.py  (+4 more)
src/: ODE_filters.py  gaussian_inference.py  helpers.py  plotting_utils.py  sqr_gaussian_inference.py
test/: conftest.py  test_gaussian_inference.py
(+42 files in other folders)
